--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,33 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model List<Urun>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<section class="mt-3">
+    <div class="container">
+        <div class="card">
+            <div class="row p-1 p-lg-2 gx-2">
+                <div class="col-lg-3 d-none d-lg-block">
+                    <!-- menu -->
+                    @await Html.PartialAsync("Partials/_Menu", ViewData["Kategoriler"])
+                </div>
+                <div class="col-lg-9">
+                    <!-- slider -->
+                    @await Html.PartialAsync("Partials/_Slider")
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mt-3">
+    <div class="container">
+        <h3 class="h4 mb-1 mb-lg-3">Son Eklenenler</h3>
+
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-2">
+            @foreach (var urun in Model)
+            {
+                <div class="col">
+                    @await Html.PartialAsync("Partials/_UrunCard", urun)
+                </div>
+            }
+        </div>
+    </div>
+</section>
