--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-lg-9">
                     <!-- slider -->
-                    @await Html.PartialAsync("Partials/_Slider")
+                    @await Component.InvokeAsync("Slider")
                 </div>
             </div>
         </div>
