--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         @await Html.PartialAsync("Partials/_TopBar")
 
-        @await Html.PartialAsync("Partials/_NavBar")
+        @await Component.InvokeAsync("Navbar")
     </header>
 
     <main>
