--- a/Views/Shared/Partials/_Menu.cshtml
+++ b/Views/Shared/Partials/_Menu.cshtml
@@ -6,7 +6,8 @@
     @foreach (var kategori in Model)
     {
 
-        <a href="#" class="nav-link">@kategori.KategoriAdi</a>
+        <a href="/urunler/@kategori.Url" class="nav-link">@kategori.KategoriAdi</a>
+
     }
 
 
