--- a/Views/Urun/Details.cshtml
+++ b/Views/Urun/Details.cshtml
@@ -1,3 +1,4 @@
+@using SQLitePCL
 @model Urun
 
 
@@ -73,88 +74,53 @@
 
 <section class="mt-3">
     <div class="container">
+
+    @{
+  var urunler = (List<Urun>)ViewData["Benzer Urunler"]!;
+    }  
+  
+    @if(urunler.Count >0)
+    {
+        
         <h4 class="mb-3">Benzer Ürünler</h4>
         <div class="row gy-3">
-            <div class="col-lg-3 col-sm-6 col-12">
+
+                   
+                 
+                 @foreach(var item in (List<Urun>)ViewData["Benzer Urunler"]!)
+                {
+
+
+                <div class="col-lg-3 col-sm-6 col-12">
                 <div class="card shadow">
                     <div class="img-wrap">
                         <span class="fa fa-regular fa-heart"></span>
-                        <img src="~/img/2.jpeg" alt="ürün 1" class="card-img-top">
+                        <img src="~/img/@item.Resim" alt="ürün 1" class="card-img-top">
                     </div>
 
                     <div class="border-top info-wrap">
-                        <a href="#" class="title text-truncate">Apple Watch Yıldız Işığı Alüminyum Kasa ve spor
-                            Kordon</a>
+                        <a href="#" class="title text-truncate">@item.UrunAdi</a>
                         <div class="price-wrap mb-3">
-                            <span class="price-discount">45.999 ₺</span>
-                            <del class="price">49.999 ₺</del>
+                            <span class="price-discount">@item.Fiyat</span>
+                            @* <del class="price">49.999 ₺</del> *@
                         </div>
                         <a href="#" class="btn btn-light w-100">
                             <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-12">
-                <div class="card shadow">
-                    <div class="img-wrap">
-                        <span class="fa fa-regular fa-heart"></span>
-                        <img src="~/img/2.jpeg" alt="ürün 1" class="card-img-top">
-                    </div>
+         </div>
 
-                    <div class="border-top info-wrap">
-                        <a href="#" class="title text-truncate">Apple Watch Yıldız Işığı Alüminyum Kasa ve spor
-                            Kordon</a>
-                        <div class="price-wrap mb-3">
-                            <span class="price-discount">45.999 ₺</span>
-                            <del class="price">49.999 ₺</del>
-                        </div>
-                        <a href="#" class="btn btn-light w-100">
-                            <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-12">
-                <div class="card shadow">
-                    <div class="img-wrap">
-                        <span class="fa fa-regular fa-heart"></span>
-                        <img src="~/img/2.jpeg" alt="ürün 1" class="card-img-top">
-                    </div>
+}
+        
 
-                    <div class="border-top info-wrap">
-                        <a href="#" class="title text-truncate">Apple Watch Yıldız Işığı Alüminyum Kasa ve spor
-                            Kordon</a>
-                        <div class="price-wrap mb-3">
-                            <span class="price-discount">45.999 ₺</span>
-                            <del class="price">49.999 ₺</del>
-                        </div>
-                        <a href="#" class="btn btn-light w-100">
-                            <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6 col-12">
-                <div class="card shadow">
-                    <div class="img-wrap">
-                        <span class="fa fa-regular fa-heart"></span>
-                        <img src="~/img/2.jpeg" alt="ürün 1" class="card-img-top">
-                    </div>
+            
+         </div>
+    }
 
-                    <div class="border-top info-wrap">
-                        <a href="#" class="title text-truncate">Apple Watch Yıldız Işığı Alüminyum Kasa ve spor
-                            Kordon</a>
-                        <div class="price-wrap mb-3">
-                            <span class="price-discount">45.999 ₺</span>
-                            <del class="price">49.999 ₺</del>
-                        </div>
-                        <a href="#" class="btn btn-light w-100">
-                            <i class="fa fa-shopping-basket me-1"></i> Sepete Ekle
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+      
+      
+        
+
     </div>
 </section>
