--- a/Views/Urun/List.cshtml
+++ b/Views/Urun/List.cshtml
@@ -4,6 +4,10 @@
 <section class="mt-3">
     <div class="container">
         <h3 class="h4 mb-1 mb-lg-3">Ürün Listesi</h3>
+        @if (Model.Count() == 0)
+        {
+            <div class="alert alert-danger">Bu kategoride ürün bulunmamaktadır.</div>
+        }
 
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-2">
             @foreach (var urun in Model)
