--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
             <div class="row p-1 p-lg-2 gx-2">
                 <div class="col-lg-3 d-none d-lg-block">
                     <!-- menu -->
-                    @await Html.PartialAsync("Partials/_Menu", ViewData["Kategoriler"])
+                    @await Html.PartialAsync("Partials/Site/_Menu", ViewData["Kategoriler"])
                 </div>
                 <div class="col-lg-9">
                     <!-- slider -->
@@ -25,7 +25,7 @@
             @foreach (var urun in Model)
             {
                 <div class="col">
-                    @await Html.PartialAsync("Partials/_UrunCard", urun)
+                    @await Html.PartialAsync("Partials/Site/_UrunCard", urun)
                 </div>
             }
         </div>
