--- a/Views/Urun/List.cshtml
+++ b/Views/Urun/List.cshtml
@@ -13,7 +13,7 @@
             @foreach (var urun in Model)
             {
                 <div class="col">
-                    @await Html.PartialAsync("Partials/_UrunCard", urun)
+                    @await Html.PartialAsync("Partials/Site/_UrunCard", urun)
                 </div>
             }
         </div>
