--- a/Views/Shared/Partials/Site/_TopBar.cshtml
+++ b/Views/Shared/Partials/Site/_TopBar.cshtml
@@ -19,10 +19,10 @@
                 </div>
             </div>
             <div class="col-lg-5">
-                <form>
+                <form asp-action="list" asp-controller="Urun" method="get">
                     <div class="input-group">
-                        <input type="text" placeholder="Anahtar kelime" class="form-control">
-                        <button class="btn btn-primary"><i class="fa fa-search"></i></button>
+                        <input name="q" type="text" placeholder="Anahtar kelime" class="form-control">
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
                     </div>
                 </form>
             </div>
