--- a/Views/Shared/_SiteLayout.cshtml
+++ b/Views/Shared/_SiteLayout.cshtml
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" />
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/css/site.css">
     <title>E-Commerce</title>
 </head>
 
 <body class="bg-light">
 
     <header>
-        @await Html.PartialAsync("Partials/_TopBar")
+        @await Html.PartialAsync("Partials/Site/_TopBar")
 
         @await Component.InvokeAsync("Navbar")
     </header>
@@ -23,7 +23,7 @@
     </main>
 
 
-    @await Html.PartialAsync("Partials/_Footer")
+    @await Html.PartialAsync("Partials/Site/_Footer")
     <script src="~/js/fslightbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
